--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <button class="btn delete">Delete</button>
             </div>
             <div class="btns-container">
-                <button class="btn num">7</button>
-                <button class="btn num">8</button>
-                <button class="btn num">9</button>
+                <button class="btn num" value="7">7</button>
+                <button class="btn num" value="8">8</button>
+                <button class="btn num" value="9">9</button>
                 <button class="btn operator">%</button>
                 <button class="btn num">4</button>
                 <button class="btn num">5</button>
