fixed decimal operations

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="btn num">2</button>
                 <button class="btn num">3</button>
                 <button class="btn operator">-</button>
-                <button class="btn num">.</button>
+                <button id="decimal" class="btn num">.</button>
                 <button class="btn num">0</button>
                 <button class="btn equals">=</button>
                 <button class="btn operator">+</button>
